<resources>
    <string name="app_name">StageProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="URL_Zimbra">Zimbra (school email)</string>
    <string name="URL_SMS">SMS (MySchool)</string>
    <string name="URL_ExtranetSEc">http://extranet.eeb2.eu/Secondary/login.php</string>
    <string name="URL_ExtranetPri">http://extranet.eeb2.eu/Primary/login.php</string>
    <string name="URL_ChangePass">http://www.eeb2.be/ChangePassword/login.php</string>
    <string name="URL_Portal">https://portal.eursc.org/</string>
    <string name="URL_Learning">Its Learning</string>
    <string name="URL_Tutorials_ICT">http://www.eeb2.be/ICT/</string>
    <string name="URL_Alumni">Alumni Europae: ES Students Association</string>
    <string name="URL_Pupils_Facebook">Pupils\' Committee\'s Facebook page</string>
    <string name="URL_Blog">Pupils\' newspaper : The Woluwe Independent</string>
    <string name="user_pass">Username and password required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="één">08.30\n09.15</string>
    <string name="twee">09.20\n10.05</string>
    <string name="drie">10.10\n10.55</string>
    <string name="vier">11.15\n12.00</string>
    <string name="vijf">12.05\n12.50</string>
    <string name="zes">12.55\n13.40</string>
    <string name="zeven">12.55\n13.40</string>
    <string name="zeve">13.45\n14.30</string>
    <string name="acht">14.35\n15.20</string>
    <string name="negen" >15.25\n16.10</string>
    <string name="EEB2_APP">
        <big>EEB2 APP</big>
    </string>

</resources>
